# power-loop

./: README.md  pyproject.toml  requirements.txt
llm_client/: llm_factory.py
power_loop/: __init__.py
power_loop/agent/: __init__.py  loop.py  system_prompt.py  types.py
power_loop/contracts/: __init__.py  event_payloads.py  events.py  handlers.py  hook_contexts.py  hooks.py  messages.py  protocols.py  tools.py
power_loop/core/: agent.py  agent_context.py  events.py  hooks.py  phase.py  pipeline.py  runner.py  state.py
power_loop/runtime/: env.py  skills.py
power_loop/tools/: __init__.py  default_manifest.py  default_tools.py  registry.py  spawn_agent.py
tests/: smoke_agent_loop_v1.py  smoke_contract_definitions.py  smoke_tool_registry.py  test_agent_loop_events_hooks.py  test_comprehensive_showcase.py  test_hook_directives.py  test_pipeline.py  test_real_agent_loop_smoke.py  test_real_showcase.py  test_real_streaming_subagent.py  test_spawn_agent.py
