[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "power-loop"
version = "0.1.0"
description = "Agent loop core (power-loop) with events/hooks/tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "anthropic>=0.42.0",
  "openai>=1.52.0",
  "socksio>=1.0.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0",
  "rich>=13.0.0",
  "pypdf>=5.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["power_loop*", "llm_client*"]
exclude = ["tests*", "docs*", "references*", "examples*", "temp*", "images*"]

